monitoring/karma/karma.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: karma-dep
  namespace: monitoring
  labels:
    app.kubernetes.io/name: karma
    app.kubernetes.io/component: monitoring
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: karma
  template:
    metadata:
      labels:
        app.kubernetes.io/name: karma
        app.kubernetes.io/component: monitoring
    spec:
      containers:
      - name: karma
        image: ghcr.io/prymitive/karma:latest
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 32Mi
        ports:
        - containerPort: 8080
          name: http-karma
        volumeMounts:
        - name: karma-vm
          mountPath: /etc/karma/

      volumes:
      - name: karma-vm
        configMap:
          name: karma-cm

---
apiVersion: v1
kind: Service
metadata:
  name: karma-service
  namespace: monitoring
  labels:
    app.kubernetes.io/name: karma-service
spec:
  selector:
    app.kubernetes.io/name: karma
  ports:
  - port: 8080
    name: http-karma
