monitoring/karma/karma-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: karma-ingress
  namespace: monitoring
spec:
  rules:
  - host: "karma.home.local"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: karma-service
            port:
              number: 8080
